--- a/serviceOrder/src/io/github/paulinhocorazza/screens/ClientScreen.form
+++ b/serviceOrder/src/io/github/paulinhocorazza/screens/ClientScreen.form
@@ -84,7 +84,7 @@
                       <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
                       <Component id="btnUpdateClient" min="-2" pref="142" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="88" max="-2" attributes="0"/>
-                      <Component id="btnDeleteUser" min="-2" pref="142" max="-2" attributes="0"/>
+                      <Component id="btnDeleteClient" min="-2" pref="142" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace pref="61" max="32767" attributes="0"/>
@@ -137,7 +137,7 @@
               <Component id="jLabel11" min="-2" pref="28" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="btnDeleteUser" min="-2" pref="144" max="-2" attributes="0"/>
+                  <Component id="btnDeleteClient" min="-2" pref="144" max="-2" attributes="0"/>
                   <Component id="btnCreateClient" alignment="1" min="-2" pref="144" max="-2" attributes="0"/>
                   <Component id="btnUpdateClient" alignment="1" min="-2" pref="144" max="-2" attributes="0"/>
               </Group>
@@ -188,7 +188,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCreateClientActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="btnDeleteUser">
+    <Component class="javax.swing.JButton" name="btnDeleteClient">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/io/github/paulinhocorazza/icons/delete.png"/>
@@ -196,7 +196,7 @@
         <Property name="toolTipText" type="java.lang.String" value="Excluir Usu&#xe1;rio"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDeleteUserActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDeleteClientActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
